[fix] More contrast for buttons [fix] More padding for radio and checkbox

--- a/limesurvey/mixins/buttons.less
+++ b/limesurvey/mixins/buttons.less
@@ -10,7 +10,7 @@
 
   &:focus,
   &.focus {
-    color: @color;
+    color: @hcolor;
     background-color: @hbackground;
         border-color: darken(@hborder, 12%);
   }
