--- a/variables-skelvanilla.less
+++ b/variables-skelvanilla.less
@@ -43,7 +43,7 @@
 @ls-radiocheckox-checked-bg:            @btn-primary-hover-bg;
 @ls-radiocheckox-border-radius:         @border-radius-base;
 
-@ls-radiocheckoxpadding-vertical:       @padding-large-vertical;
+@ls-radiocheckoxpadding-vertical:       @padding-large-vertical*1.3;
 @ls-radiocheckoxpadding-horizontal:     @padding-large-horizontal; // Usage *2 and /2
 
 // Usage with template-skelvanilla-awesome-checkbox
